# smolbitset

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: ci.yml  coverage.yml
src/: bitop.rs  bst_slice.rs  cmp.rs  fmt.rs  from.rs  hash.rs  lib.rs  serde.rs  shifts.rs  typesize.rs
