[package]
name = "smolbitset"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[features]
default = ["std"]
std = ["num-bigint/std"]
serde = ["dep:serde"]
typesize = ["dep:typesize"]

[dependencies]
num-bigint = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, optional = true }
typesize = { version = "0.1", optional = true, default-features = false }

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "allow"
option_if_let_else = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
cast_sign_loss = "allow"
